# rust-tab-hash

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  README.tpl  build.rs
src/: lib.rs
tests/: lib.rs  reference_implementation.c
