[package]
name = "tab-hash"
version = "0.1.2"
authors = ["Henning Timm <henning.timm@tu-dortmund.de>"]
description = "Simple and twisted tabulation hashing for 32-bit unsigned integers."
homepage = "https://github.com/HenningTimm/rust-tab-hash"
repository = "https://github.com/HenningTimm/rust-tab-hash"
documentation = "https://docs.rs/tab-hash"
build = "build.rs"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = ["hash", "hashing"]

[badges]
travis-ci = { repository = "HenningTimm/rust-tab-hash" }

[dependencies]
rand = "0.6.5"
array-init = "0.0.4"

[build-dependencies]
cc = "1.0.35"
