[package]
name = "tab-hash"
version = "0.3.0"
authors = ["Henning Timm <henning.timm@tu-dortmund.de>"]
description = "Simple and twisted tabulation hashing for 32-bit and 64-bit unsigned integers."
homepage = "https://github.com/HenningTimm/rust-tab-hash"
repository = "https://github.com/HenningTimm/rust-tab-hash"
documentation = "https://docs.rs/tab-hash"
build = "build.rs"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = ["hash", "hashing"]

[badges]
travis-ci = { repository = "HenningTimm/rust-tab-hash" }

[dependencies]
rand = "0.7"
array-init = "0.1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bincode = "1.2.1"

[build-dependencies]
cc = "1.0.46"
